ChipSeq R markdown for 485 Multichrom heatmap for 482

--- a/ccbr482/CCBR-482_RNASeq.Rmd
+++ b/ccbr482/CCBR-482_RNASeq.Rmd
@@ -180,6 +180,7 @@ options(op)
 
 library(d3heatmap)
 topgenes_data=v$E[rownames(v$E) %in% rownames(topgenes),]
+topgenes_data=topgenes_data[match(rownames(topgenes),rownames(topgenes_data)),]
 d3heatmap(topgenes_data, scale = "column", dendrogram = "none",
     color = "YlOrRd")
 
